shalinee | TEST | overlapping issue on sales/purchase register and ledger design fixed

--- a/apps/web-giddh/src/app/ledger/ledger.component.scss
+++ b/apps/web-giddh/src/app/ledger/ledger.component.scss
@@ -668,6 +668,9 @@ sh-select:focus {
     background-color: $alice-blue-light;
     padding-left: 5px;
 }
+.show-if-ledger-open{
+    height: 230px;
+}
 @media only screen and (max-width: 1540px) {
     .modal-ledger {
         width: 85%;
